# bevy_mod_sprite3d

./: Cargo.toml
examples/: sprite.rs
src/: lib.rs
