[package]
name = "bevy_mod_sprite3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.15"
bevy_app = "0.15"
bevy_image = "0.15"
bevy_math = "0.15"
bevy_color = "0.15"
bevy_render = "0.15"
bevy_asset = "0.15"
bevy_pbr = "0.15"
bevy_sprite = "0.15"
bevy_utils = "0.15"
bevy_transform = "0.15"
bevy_reflect = "0.15"

[dev-dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }

[profile.dev.package."*"]
opt-level = 3
